# Pidux

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
include/: Pidux.h  Pipeline.h
include/Pidux/: ExecutionLine.h  ExecutionUnit.h  Gate.h
include/Pipeline/: ExecutionLine.h  ExecutionUnit.h  Gate.h
pidux/: CMakeLists.txt
pidux-overlay-ports/: portfile.cmake  usage  vcpkg.json
pidux/cmake/: pidux-config.cmake.in
pidux/include/: pidux.h
pidux/include/pidux/: ExecutionLine.h  ExecutionUnit.h  Gate.h
sample/: CMakeLists.txt  main.cpp
tests/compile_test/: CMakeLists.txt
tests/compile_test/src/: main.cpp
tests/package_test/: CMakeLists.txt  vcpkg.json
tests/package_test/src/: main.cpp
